# spring-2025-final-project-team-4

./: .gitignore  Makefile  readme.md
install/: local_setup.sh  setup.sh
log/: latest_build
robotic_arm_arduino_driver/: .gitignore  README.md  platformio.ini
robotic_arm_arduino_driver/include/: README
robotic_arm_arduino_driver/lib/: README
robotic_arm_arduino_driver/src/: main.cpp
robotic_arm_arduino_driver/test/: README
src/armangles/: package.xml  setup.cfg  setup.py
src/armangles/armangles/: sendangles.py
src/armangles/launch/: armlaunch.launch.py
src/armangles1/: package.xml  setup.cfg  setup.py
src/armangles1/armangles1/: sendangles.py
src/armangles1/launch/: armlaunch.launch.py
src/install/: local_setup.sh  setup.sh
src/launch/: perception_and_planner.launch.py  perception_launch.py
src/log/: latest_build
src/oakd_camera/: package.xml  setup.cfg  setup.py
src/ros2_aruco_perception/: package.xml  setup.cfg  setup.py
src/ros2_aruco_perception/ros2_aruco_perception/: perception_node.py
src/ros2_aruco_perception/ros2_aruco_perception.egg-info/: SOURCES.txt  entry_points.txt
src/ros2_aruco_perception/scripts/: perception_node
src/ros2_task_planner/: package.xml  setup.cfg  setup.py
src/ros2_task_planner/ros2_task_planner/: task_planner_node.py
src/ros2_task_planner/ros2_task_planner/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/ros2_task_planner/ros2_task_planner/log/: latest_build
src/usb_cam_driver/: package.xml  setup.cfg  setup.py
turn_servo2/: turn_servo2.ino
(+70 files in other folders)
