<package format="3">
  <name>ros2_aruco_perception</name>
  <version>0.0.0</version>
  <description>ROS 2 ArUco Perception Node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
