<?xml version="1.0"?>
<package format="3">
  <name>ros2_task_planner</name>
  <version>0.0.1</version>
  <description>Python ROS 2 node for planning tasks</description>

  <maintainer email="your@email.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
